--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   provider: ^4.1.3
   intl : ^0.16.1
   numberpicker: ^1.0.0
+  flutter_launcher_icons: ^0.8.1
   flutter:
     sdk: flutter
 
@@ -38,6 +39,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/alarm.png"    
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
